// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@vuepress/markdown > plugins > codePlugin should disable \`highlightLines\` 1`] = `
<div class="language-text ext-text line-numbers-mode"><pre v-pre class="language-text"><code>Raw text
</code></pre>
  <div class="line-numbers"><span class="line-number">1</span><br></div>
</div>
<div class="language-typescript ext-ts line-numbers-mode"><pre v-pre class="language-typescript"><code>const foo = 'foo'

function bar () {
  return 1024
}
</code></pre>
  <div class="line-numbers"><span class="line-number">1</span><br><span class="line-number">2</span><br><span class="line-number">3</span><br><span class="line-number">4</span><br><span class="line-number">5</span><br></div>
</div>
<div class="language-typescript ext-ts line-numbers-mode"><pre v-pre class="language-typescript"><code>const foo = 'foo'

function bar () {
  return 1024
}
</code></pre>
  <div class="line-numbers"><span class="line-number">1</span><br><span class="line-number">2</span><br><span class="line-number">3</span><br><span class="line-number">4</span><br><span class="line-number">5</span><br></div>
</div>
`;

exports[`@vuepress/markdown > plugins > codePlugin should disable \`lineNumbers\` 1`] = `
<div class="language-text ext-text"><pre v-pre class="language-text"><code>Raw text
</code></pre>
</div>
<div class="language-typescript ext-ts"><pre v-pre class="language-typescript"><code>const foo = 'foo'

function bar () {
  return 1024
}
</code></pre>
</div>
<div class="language-typescript ext-ts"><pre v-pre class="language-typescript"><code>const foo = 'foo'

function bar () {
  return 1024
}
</code></pre>
  <div class="highlight-lines">
    <div class="highlight-line">&nbsp;</div>
    <div class="highlight-line">&nbsp;</div><br><br><br>
  </div>
</div>
`;

exports[`@vuepress/markdown > plugins > codePlugin should disable \`preWrapper\` 1`] = `
<pre v-pre class="language-text"><code>Raw text
</code></pre><pre v-pre class="language-typescript"><code>const foo = 'foo'

function bar () {
  return 1024
}
</code></pre><pre v-pre class="language-typescript"><code>const foo = 'foo'

function bar () {
  return 1024
}
</code></pre>
`;

exports[`@vuepress/markdown > plugins > codePlugin should disable \`vPre\` 1`] = `
<div class="language-text ext-text line-numbers-mode"><pre class="language-text"><code>Raw text
</code></pre>
  <div class="line-numbers"><span class="line-number">1</span><br></div>
</div>
<div class="language-typescript ext-ts line-numbers-mode"><pre class="language-typescript"><code>const foo = 'foo'

function bar () {
  return 1024
}
</code></pre>
  <div class="line-numbers"><span class="line-number">1</span><br><span class="line-number">2</span><br><span class="line-number">3</span><br><span class="line-number">4</span><br><span class="line-number">5</span><br></div>
</div>
<div class="language-typescript ext-ts line-numbers-mode"><pre class="language-typescript"><code>const foo = 'foo'

function bar () {
  return 1024
}
</code></pre>
  <div class="highlight-lines">
    <div class="highlight-line">&nbsp;</div>
    <div class="highlight-line">&nbsp;</div><br><br><br>
  </div>
  <div class="line-numbers"><span class="line-number">1</span><br><span class="line-number">2</span><br><span class="line-number">3</span><br><span class="line-number">4</span><br><span class="line-number">5</span><br></div>
</div>
`;

exports[`@vuepress/markdown > plugins > codePlugin should process code fences with default options 1`] = `
<div class="language-text ext-text line-numbers-mode"><pre v-pre class="language-text"><code>Raw text
</code></pre>
  <div class="line-numbers"><span class="line-number">1</span><br></div>
</div>
<div class="language-typescript ext-ts line-numbers-mode"><pre v-pre class="language-typescript"><code>const foo = 'foo'

function bar () {
  return 1024
}
</code></pre>
  <div class="line-numbers"><span class="line-number">1</span><br><span class="line-number">2</span><br><span class="line-number">3</span><br><span class="line-number">4</span><br><span class="line-number">5</span><br></div>
</div>
<div class="language-typescript ext-ts line-numbers-mode"><pre v-pre class="language-typescript"><code>const foo = 'foo'

function bar () {
  return 1024
}
</code></pre>
  <div class="highlight-lines">
    <div class="highlight-line">&nbsp;</div>
    <div class="highlight-line">&nbsp;</div><br><br><br>
  </div>
  <div class="line-numbers"><span class="line-number">1</span><br><span class="line-number">2</span><br><span class="line-number">3</span><br><span class="line-number">4</span><br><span class="line-number">5</span><br></div>
</div>
`;
